--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 
 <!-- DO NOT TOUCH THIS PART EXCEPT FILLING YOUR OR YOUR GROUP's NAME -->
 
-This progress journal covers [STUDENT NAME SURNAME / PROJECT GROUP NAME]'s work during their term at [BDA 503 Fall 2022](https://mef-bda503.github.io/fall22/).
+This progress journal covers Honey Drip's work during their term at [BDA 503 Fall 2022](https://mef-bda503.github.io/fall22/).
 
 Each section is an assignment or an individual work.
 
@@ -10,9 +10,11 @@ Each section is an assignment or an individual work.
 
 <!-- # Group Members
 
-+ [Member 1](Member 1's Progress Journal URL with https://)  
-+ [Member 2](Member 2's Progress Journal URL with https://)
-+ [Member 3](Member 3's Progress Journal URL with https://)
++ [Ugur Ozata](Member 1's Progress Journal URL with https://)  
++ [Egemen Atam](Member 2's Progress Journal URL with https://)
++ [Yaser](Member 3's Progress Journal URL with https://)
++ [Bengu](Member 3's Progress Journal URL with https://)
++ [Bayram](Member 3's Progress Journal URL with https://)
 
 # Group Project Details
 
