--- a/assignment1.qmd
+++ b/assignment1.qmd
@@ -34,9 +34,9 @@ sd21 <- sd21 %>% mutate(`Stake (%)` = as.numeric(`Stake (%)`))
 ```
 
 ## Key Takeaways
-- E-commerces gets more investment than the sum of the total investment of other sectors.
+- The e-commerce and delivery sectors received the most investment by far. But we noticed something that most of these investments were made in only 2 companies, Trendyol with 1.435.000.000 and Getir with 1.018.000.000.
 - It is seen that the most investments are made from the USA in terms of total USD value. Count of investors from Turkey is about 90% according to total count.
-- Gaming sector is quite popular compared to other sectors according to all investment stages.
+- Gaming sector is quite popular compared to other sectors according to all investment stages.Although it may not receive the most investment in terms of total value, the sector that receives the most investment in terms of numbers is the gaming sector. The fact that this sector receives the most investment especially in the seed stage may be an indication that this sector will grow in the short-medium term.
 ---
 
 ### Distribution of investments by sectors
