--- a/index.qmd
+++ b/index.qmd
@@ -8,12 +8,14 @@ Each section is an assignment or an individual work.
 
 <!-- IF THIS IS A GROUP UNCOMMENT BELOW -->
 
-<!-- # Group Members
+# Group Members
 
-+ [Member 1](Member 1's Progress Journal URL with https://)  
-+ [Member 2](Member 2's Progress Journal URL with https://)
-+ [Member 3](Member 3's Progress Journal URL with https://)
++ [Ugur Ozata](Member 1's Progress Journal URL with https://)  
++ [Egemen Atam](Member 2's Progress Journal URL with https://)
++ [Yaser](Member 3's Progress Journal URL with https://)
++ [Bengu](Member 3's Progress Journal URL with https://)
++ [Bayram](Member 3's Progress Journal URL with https://)
 
 # Group Project Details
 
-Our group project is [PROJECT NAME]. [SHORT DESCRIPTION] -->
+Our group project is [PROJECT NAME]. [SHORT DESCRIPTION] 
