--- a/assignment1.qmd
+++ b/assignment1.qmd
@@ -15,6 +15,7 @@ This report summarizes some of the analyzes startups getting investments from a 
 ## Data Preparation
 
 ```{r, required libraries, message = FALSE}
+#| warning: false
 # Required libraries
 library(dplyr)
 library(tidyverse)
@@ -36,6 +37,7 @@ sd21 <- sd21 %>% mutate(`Stake (%)` = as.numeric(`Stake (%)`))
 ## Key Takeaways
 - The e-commerce and delivery sectors received the most investment by far. But we noticed something that most of these investments were made in only 2 companies, Trendyol with 1.435.000.000 and Getir with 1.018.000.000.
 - It is seen that the most investments are made from the USA in terms of total USD value. Count of investors from Turkey is about 90% according to total count.
+- Trendyol, Getir, Hepsiburada, Dream Games are the top 4 companies that collect the most investment. (86% of total investment)
 - Gaming sector is quite popular compared to other sectors according to all investment stages.Although it may not receive the most investment in terms of total value, the sector that receives the most investment in terms of numbers is the gaming sector. The fact that this sector receives the most investment especially in the seed stage may be an indication that this sector will grow in the short-medium term.
 ---
 
@@ -46,13 +48,31 @@ sd21 %>%group_by(`Sector`)%>%
   arrange(desc(sum))
 ```
 
+### Getir is the only company that have Later VC Stage
+
+```{r}
+#| warning: false
+sd21 %>%filter(`Investment Stage` == "Later VC Stage") %>% group_by(`Target Company`)%>%
+  summarize(count=n()) %>%
+  arrange(desc(count))
+```
+
+### Trendyol, Getir, Hepsiburada, Dream Games are the top 4 companies that collect the most investment. (86% of total investment)
+```{r}
+#| warning: false
+sd21 %>% group_by(`Target Company`)%>%
+  summarize(sum=sum(`Deal Value (USD)`,na.rm = TRUE) ) %>%
+  arrange(desc(sum)) %>%
+  top_n(4)
+```
+
 ### Which countries the investors invested from and how much they invested?
 ```{r}
 sd21 %>%group_by(`Investor's Origin`)%>%
   summarize(sum =sum(`Deal Value (USD)`),count=n()) %>%
   arrange(desc(sum))
 sd21 %>%group_by(`Investor's Origin`)%>%
-  summarize(sum =sum(`Deal Value (USD)`,na.rm = TRUE),count=n()) %>%
+  summarize(sum =sum(`Deal Value (USD)`,na.rm = TRUE),count=n(),average=sum/count) %>%
   arrange(desc(count))
 ```
 
@@ -78,6 +98,30 @@ allc <- all %>% left_join(SeedStage, by = "Sector")  %>% left_join(EarlyVC, by =
 colnames(allc) <- c("Sector","All","Seed","Early","Later","Acquisition")
 allc
 ```
+
+### How many investment is received by each origin according to the stages?
+```{r}
+#| warning: false
+InvestorsOriginSeedStage <- sd21 %>%filter(`Investment Stage` == "Seed Stage") %>% group_by(`Investor's Origin`)%>%
+  summarize(count=n()) %>%
+  arrange(desc(count))
+InvestorsOriginEarlyVC <- sd21 %>%filter(`Investment Stage` == "Early VC Stage") %>% group_by(`Investor's Origin`)%>%
+  summarize(count=n()) %>%
+  arrange(desc(count))
+InvestorsOriginLaterVC  <- sd21 %>%filter(`Investment Stage` == "Later VC Stage") %>% group_by(`Investor's Origin`)%>%
+  summarize(count=n()) %>%
+  arrange(desc(count))
+InvestorsOriginAcquisition <- sd21 %>%filter(`Investment Stage` == "Acquisition") %>% group_by(`Investor's Origin`)%>%
+  summarize(count=n()) %>%
+  arrange(desc(count))
+InvestorsOriginall <-  sd21 %>% group_by(`Investor's Origin`)%>%
+  summarize(count=n()) %>%
+  arrange(desc(count))
+InvestorsOriginallc <- InvestorsOriginall %>% left_join(InvestorsOriginSeedStage, by = "Investor's Origin")  %>% left_join(InvestorsOriginEarlyVC, by = "Investor's Origin") %>% left_join(InvestorsOriginLaterVC, by = "Investor's Origin") %>% left_join(InvestorsOriginAcquisition, by = "Investor's Origin")
+colnames(InvestorsOriginallc) <- c("Investor's Origin","All","Seed","Early","Later","Acquisition")
+InvestorsOriginallc
+```
+
 
 ### What sector did American investors invest in?
 ```{r}
