--- a/ExploratoryDataAnalysis.qmd
+++ b/ExploratoryDataAnalysis.qmd
@@ -34,6 +34,13 @@ House_sales_to_foreigners_year <- readRDS("Datards/House_sales_to_foreigners_yea
 monthly_usd_to_try <- read_excel("data/monthly_usd_to_try.xls")
 monthly_usd_to_try$month <- as.Date(monthly_usd_to_try$month)
 monthly_usd_to_try$month <- format(monthly_usd_to_try$month,"%Y-%b-%d")
+
+PATH <- "data/House Sales by Provinces.xls"
+house_sales_by_provinces <- read_excel(PATH, range = cell_rows(14:129), col_names = names(read_excel(PATH, skip = 2))) 
+
+total_sales_by_year <- aggregate(house_sales_by_provinces[3], house_sales_by_provinces[1], FUN=sum)
+
+
 ```
 
 
@@ -77,14 +84,10 @@ ggplot(monthly_usd_to_try, aes(x = `month`, y = `usd_rate`, group = 1)) +
 
 
 ```{r}
-PATH <- "data/House Sales by Provinces.xls"
-
-house_sales_by_provinces <- read_excel(PATH, range = cell_rows(14:129), col_names = names(read_excel(PATH, skip = 2))) 
-
 house_sales_by_provinces  <- house_sales_by_provinces  %>%
     fill(colnames(house_sales_by_provinces[1]), .direction = "downup")
 
-# Creating Time Series Object
+# Creating Time Series Object for House Sales by Proviences
 total_hs_ts <- ts(house_sales_by_provinces[3],start=c(2013,1),frequency=12)
 
 options(repr.plot.width=21, repr.plot.height=8)
@@ -93,7 +96,7 @@ plot(total_hs_ts)
 
 
 ```{r}
-total_sales_by_year <- aggregate(house_sales_by_provinces[3], house_sales_by_provinces[1], FUN=sum)
+
 colnames(total_sales_by_year) <- c('Year','Total')
 
 # Total Sales by Year
@@ -102,7 +105,7 @@ ggplot(data=total_sales_by_year, aes(x=as.factor(Year), y=Total)) +
     geom_bar(stat="identity", fill="steelblue")
 ```
 
-```{r fig.height = 15}
+```{r fig.height = 15, fig.width = 8}
 # Annual average house sales by provinces (except 2022)
 annual_avg_hs <- slice(house_sales_by_provinces %>% 
     group_by(house_sales_by_provinces[1]) %>% 
@@ -111,5 +114,6 @@ annual_avg_hs <- slice(house_sales_by_provinces %>%
 
 # Annual average house sales by provinces (except 2022)
 
-barplot(unlist(annual_avg_hs), col = rainbow(100), las=2, cex.names=.9, horiz = TRUE)
+barplot(unlist(annual_avg_hs), col = rainbow(100), las=2, cex.names=.6, horiz = TRUE)
+
 ```
