--- a/ExploratoryDataAnalysis.qmd
+++ b/ExploratoryDataAnalysis.qmd
@@ -40,22 +40,24 @@ house_sales_by_provinces <- read_excel(PATH, range = cell_rows(14:129), col_name
 
 total_sales_by_year <- aggregate(house_sales_by_provinces[3], house_sales_by_provinces[1], FUN=sum)
 
+House_sales_to_foreigners_month <- read_excel("data/House sales to foreigners.xls", 
+                                                   sheet = "Month")
+House_sales_to_foreigners_month$Month <- match(House_sales_to_foreigners_month$Month, month.name)
+
+House_sales_to_foreigners_month$Date <- as.yearmon(paste(House_sales_to_foreigners_month$Year, House_sales_to_foreigners_month$Month), "%Y %m")
 
 ```
 
 
 ```{r}
-ggplot(House_sales_to_foreigners_year, aes(Year)) + 
+ggplot(House_sales_to_foreigners_month, aes(Date)) + 
   geom_line(aes(y = Total, colour = "Total")) + 
   geom_line(aes(y = `Sales to foreigners`, colour = "Sales To Foreigners"))
 
-total_sale2021 = House_sales_to_foreigners_year %>% select(`Total`) %>% filter(House_sales_to_foreigners_year$Year == 2021)
-total_sale2022 = House_sales_to_foreigners_year %>% select(`Total`) %>% filter(House_sales_to_foreigners_year$Year == 2022)
+ggplot(House_sales_to_foreigners_month, aes(Date)) + 
+  geom_line(aes(y = `Share (%)`, colour = "Share (%)"))
 
 
-1- (total_sale2022 / total_sale2021) 
-
-"Between 2021 and 2022 there is  % 22.25 decrease in total sales but when we look to foreign share it increse in terms of percentages"
 
 "Finding construction cost index yearly mean to compare"
 ConsIndexYear <- ConsIndex %>% group_by(Year) %>% summarise(Construction_cost_mean = mean(index, na.rm = TRUE))
